minor css changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
   	<meta charset="UTF-8">
   	<title>BareBNB Plus</title>
   </head>
-  <body>
+  <body style="height:100% !important;">
   	<div id="Photo-gallery" style="display:block"></div>
   	<div id="Availability" style="display:block"></div>
   	<div id="Amenities" style="display:block"></div>
   	<div id="Reviews" style="display:block"></div>
-  	<div id="Suggestions" style="display:block"></div>
+  	<div id="Suggestions" style="display:block; padding-bottom:300px"></div>
   	<script src="http://localhost:4420/bundle.js"></script>
   	<script src="http://localhost:1234/bundle.js"></script>
   	<script src="http://localhost:3050/bundle.js"></script>
