--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   	<div id="Availability" style="display:block"></div>
   	<div id="Amenities" style="display:block"></div>
   	<div id="Reviews" style="display:block"></div>
-  	<div id="Suggestions" style="display:block"></div>
+  	<div id="Suggestions" style="display:block; padding-bottom:300px !important"></div>
   	<script src="http://localhost:4420/bundle.js"></script>
   	<script src="http://localhost:1234/bundle.js"></script>
   	<script src="http://localhost:3050/bundle.js"></script>
