Added dockerfile, changed server and index pathways.

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
   	<script src="http://localhost:1234/bundle.js"></script>
   	<script src="http://localhost:3050/bundle.js"></script>
   	<script src="http://localhost:8000/bundle.js"></script>
-  	<script src="http://localhost:1001/bundle.js"></script>
+  	<script src="http://18.191.46.241//bundle.js"></script>
   </body>
 </html>
