--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   	<title>BareBNB Plus</title>
   </head>
-  <body style="height:100% !important;">
-  	<div id="Photo-gallery" style="display:block"></div>
+  <body style="height:100% !important; background-color: #fff !important">
+  	<div id="photo-gallery" style="display:block"></div>
   	<div id="Availability" style="display:block"></div>
   	<div id="Amenities" style="display:block"></div>
   	<div id="Reviews" style="display:block"></div>
-  	<div id="Suggestions" style="display:block; padding-bottom:300px !important"></div>
-  	<script src="http://localhost:4420/bundle.js"></script>
-  	<script src="http://localhost:1234/bundle.js"></script>
-  	<script src="http://localhost:3050/bundle.js"></script>
-  	<script src="http://localhost:8000/bundle.js"></script>
+  	<div id="Suggestions" style="display:block; padding-bottom:300px ! important"></div>
+  	<script src="http://54.67.22.134/bundle.js"></script>
+  	<script src="http://18.217.250.139/bundle.js"></script>
+  	<script src="http://18.212.20.57/bundle.js"></script>
+  	<script src="http://13.56.234.247/bundle.js"></script>
   	<script src="http://18.191.46.241//bundle.js"></script>
   </body>
 </html>
