Implement stress testing

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
   	<title>BareBNB Plus</title>
   </head>
   <body style="height:100% !important; background-color: #fff !important">
-  	<div id="photo-gallery" style="display:block"></div>
-  	<div id="Availability" style="display:block"></div>
+  	<!-- <div id="photo-gallery" style="display:block"></div>
+  	<div id="Availability" style="display:block"></div> -->
   	<div id="Amenities" style="display:block"></div>
-  	<div id="Reviews" style="display:block"></div>
-  	<div id="Suggestions" style="display:block; padding-bottom:300px ! important"></div>
-  	<script src="http://54.67.22.134/bundle.js"></script>
-  	<script src="http://18.217.250.139/bundle.js"></script>
-  	<script src="http://18.212.20.57/bundle.js"></script>
-  	<script src="http://13.56.234.247/bundle.js"></script>
-  	<script src="http://18.191.46.241//bundle.js"></script>
+  	<!-- <div id="Reviews" style="display:block"></div>
+  	<div id="Suggestions" style="display:block; padding-bottom:300px ! important"></div> -->
+  	<!-- <script src="http://54.67.22.134/bundle.js"></script>
+  	<script src="http://18.217.250.139/bundle.js"></script> -->
+  	<script src="https://s3-us-west-2.amazonaws.com/sdc-amenities-service-bundle/bundle.js"></script>
+  	<!-- <script src="http://13.56.234.247/bundle.js"></script>
+  	<script src="http://18.191.46.241//bundle.js"></script> -->
   </body>
 </html>
